# meetup-2019-11-28

./: .gitignore  README.md  conanfile.py  index.html  slides.md
001_conan/: .gitignore  CMakeLists.txt  slides.md
001_conan/sample-app/xcode-project/: .gitignore
001_conan/sample-app/xcode-project/conan-demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
001_conan/sample-using-lib/: CMakeLists.txt  conanfile.txt
001_conan/src/: CameraFeed.hpp  Error.hpp  FaceDetector.cpp  FaceDetector.hpp  main.cpp
001_conan/xcode-project/: Info.plist  init-xcode.sh
001_conan/xcode-project/conan-demo.xcodeproj/: project.pbxproj
sample-app/: CMakeLists.txt  conanfile.txt
sample-app/vs-project/: .gitignore  ConanDemo.sln  ConanDemo.vcxproj  ConanDemo.vcxproj.filters  init-vs.bat
sample-app/xcode-project/conan-demo.xcodeproj/: project.pbxproj
sample-lib/: CMakeLists.txt
src/: AppleCameraPermission.hpp  AppleCameraPermission.mm  CameraFeed.cpp  CameraFeed.hpp  main.cpp
